# DeepSnooze

./: .gitignore  README.md  pyproject.toml
models/: epoch=0-step=500-v1.ckpt  epoch=0-step=500-v2.ckpt  epoch=0-step=500.ckpt
notebooks/: load_data.ipynb
src/deepsnooze/: data.py  data_cached.py  data_module.py  evaluate.py  ffnn.py  lora.py  metrics.py  preprocess.py  smoothing.py  train.py  train_bayesian.py  visualize_loss.py
src/deepsnooze/models/: cnn.py  ffnn.py  lora.py
src/deepsnooze/transforms/: SpecAugment.py  __init__.py  check_spectrogram.py  spectrogram_tranform.py  standardize_signal.py
