[project]
name = "deepsnooze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kasper Geert Rønberg", email = "kasper.g.roenberg@gmail.com" },
    { name = "Andreas Rosenquist", email = "a.rosenquisten@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mne>=1.11.0",
    "pandas>=3.0.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
